<resources>
    <string name="app_name">PicLo</string>
    <string name="dbinspector_app_name">PicLo DB</string>

    <!-- Strings related to login -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="settings">Settings</string>
    <string name="upload">Upload</string>
    <string name="home">Home</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="courtesy">Courtesy</string>
    <string name="choose_file">Choose file</string>
    <string name="profile">Profile</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="new_user">New user ?</string>
    <string name="forget_password">Forget password ?</string>
    <string name="registration">Registration</string>
    <string name="confirm_password">Confirm password</string>
    <string name="share_to_facebook">Share to Facebook</string>
    <string name="share_to_whats_app">Share to whats app</string>
    <string name="save">Save</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="image">Image</string>
</resources>
