<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_homepage_white_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_upload"
            android:icon="@drawable/ic_up_arrow_24dp"
            android:title="@string/upload" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_white_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/settings" />
    </group>
</menu>
