<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="4dp">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/PI_imageLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_item_bg">


            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/PI_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_piclo_24dp"
                android:transitionName="@string/image"
                tools:targetApi="lollipop" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true">


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ToggleButton
                        android:id="@+id/PI_like"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="@dimen/fab_margin"
                        android:background="@drawable/favorite_bg"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:textOff=""
                        android:textOn="" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/PI_likeCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/badge_circle"
                        android:text="100+"
                        android:textColor="@color/colorAccent"
                        android:textSize="5sp"
                        tools:ignore="SmallSp" />
                </RelativeLayout>
            </FrameLayout>
        </RelativeLayout>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp">

                <TextView
                    android:id="@+id/PI_title"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    tools:text="Title" />

                <TextView
                    android:id="@+id/PI_courtesy"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    tools:text="Courtesy" />

                <TextView
                    android:id="@+id/PI_uploadedBy"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    tools:text="Uploaded by" />
            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.v7.widget.ButtonBarLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/PI_fbShare"
                        style="?attr/buttonBarButtonStyle"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:contentDescription="@string/share_to_facebook"
                        android:src="@drawable/ic_facebook_24dp" />

                    <ImageButton
                        android:id="@+id/PI_whatsAppShare"
                        style="?attr/buttonBarButtonStyle"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:contentDescription="@string/share_to_whats_app"
                        android:src="@drawable/ic_whatsapp_24dp" />

                    <ImageButton
                        android:id="@+id/PI_saveImage"
                        style="?attr/buttonBarButtonStyle"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:contentDescription="@string/save"
                        android:src="@drawable/ic_save_black_24dp"
                        android:tint="@color/colorAccent" />
                </android.support.v7.widget.ButtonBarLayout>

                <TextView
                    android:id="@+id/PI_updatedDate"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    tools:text="24-12-2016" />
            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v7.widget.CardView>